fixing display box issue on iPhone 2nd

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,13 +166,13 @@ h1, h2, h3, h4, h5, h6 {
 .m-logos {
     text-align: center;
     display: block;
-    height: 100px;
-    width: 200px;
+    height: 50px;
+    width: 100px;
     margin-top: .25rem;
     margin-bottom: .25rem;
 }
 .m-logos:hover {
-    transform: scale(1.25);
+    transform: scale(2.0);
 }
 
 .social-icon {
@@ -191,9 +191,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 #footer {
     text-align: center;
-    font-size: .75rem;
+    font-size: 1.25rem;
 }
-@media (max-width: 1028px) {
+/* @media (max-width: 1028px) {
 
     #title {
       text-align: center;
@@ -202,11 +202,11 @@ h1, h2, h3, h4, h5, h6 {
     .m-logos {
         text-align: center;
         display: inline-flex;
-        height: 100px;
-        width: 200px;
+        height: 25px;
+        width: 50px;
         margin-top: .25rem;
         margin-bottom: .25rem;
     }
-  }
+  } */
 
 
